--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ numpy = "^1.22.2"
 replit = "^3.2.4"
 Flask = "^2.2.0"
 urllib3 = "^1.26.12"
+aiogram = "^2.25.1"
+firebase-admin = "^6.1.0"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
